# CodeLens

./: .env.example  .gitignore  DEPENDENCIES.md  README.md  index.html  package-lock.json  package.json
mojo-engine/: .gitignore  entry.mojo  pixi.toml
mojo-engine/scripts/: download_models.sh
mojo-engine/src/: __init__.mojo  classifier.mojo  clustering.mojo  diff_extractor.mojo  embeddings.mojo  git_parser.mojo  main.mojo  prompt_embedder.mojo  similarity.mojo
mojo-engine/src/intent/: __init__.mojo  edit_delta.mojo  gap_analyzer.mojo  intent_embedder.mojo  outcome_classifier.mojo  reprompt_detector.mojo  session_reconstructor.mojo
mojo-engine/src/patterns/: __init__.mojo  pattern_detector.mojo  profile_generator.mojo  temporal_tracker.mojo
mojo-engine/tests/: test_git_parser.mojo
scripts/: build-mojo.sh  build.sh  bundle.sh  dev.sh  setup.sh
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/claude/: client.rs  mod.rs  prompts.rs  types.rs
src-tauri/src/commands/: claude_api.rs  enrich.rs  mod.rs  project.rs  scan.rs  sessions.rs  settings.rs
src-tauri/src/mojo_bridge/: parser.rs  runner.rs
src-tauri/src/storage/: cache.rs  db.rs
src-tauri/src/types/: commit.rs  enriched.rs  feature.rs  mod.rs
src/hooks/: useFeatures.ts  usePatterns.ts  useProject.ts  useScore.ts  useTauriCommand.ts  useTimeline.ts
src/lib/: constants.ts  types.ts  utils.ts
src/store/: patternStore.ts  projectStore.ts  settingsStore.ts  timelineStore.ts
src/styles/: globals.css
(+25 files in other folders)
